fix: update focus ring color in the dark mode

--- a/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
@@ -1663,6 +1663,10 @@ body.indigo-dark-theme {
 
     &.active {
       box-shadow: inset 0 0 0 2px $primary;
+
+      .indigo-dark-theme & {
+        box-shadow: inset 0 0 0 2px $primary-d;
+      }
     }
 
     a {
